--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.1 <4.0.0'
+  sdk: '>=3.0.2 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,6 +44,7 @@ dependencies:
   awesome_notifications:
   smooth_page_indicator:
   permission_handler:
+  csslib:
   fluttertoast:
   flutter_localization:
 
@@ -53,7 +54,6 @@ dependencies:
   flutter_bloc:
 
   #fire base
-  firebase_core:
   firebase_auth:
   cloud_firestore:
   firebase_storage:
@@ -90,6 +90,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/
+  fonts:
+    - family: Abg
+      fonts:
+        - asset: assets/fonts/font_abg.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -102,13 +106,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
