--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_localization:
   shared_preferences:
   get_it:
   hexcolor:
@@ -47,9 +47,10 @@ dependencies:
   permission_handler:
   fluttertoast:
   flutter_local_notifications:
+  animated_splash_screen:
 
 
-  # bloc
+# bloc
   bloc:
   flutter_bloc:
 
@@ -60,9 +61,6 @@ dependencies:
 
 
   # youtube
-  youtube_explode_dart:
-  youtube_video_info:
-  youtube_player_flutter:
   pod_player:
 
 dev_dependencies:
