--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,7 +43,7 @@ dependencies:
   equatable:
   sizer:
   dartz:
-  awesome_notifications:
+  awesome_notifications: any
   smooth_page_indicator:
   permission_handler:
   fluttertoast:
