--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <application
         android:usesCleartextTraffic="true"
-        android:label="be_well"
+        android:label="BeWell"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
