--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.5.0+1
+version: 1.6.0+1
 
 environment:
   sdk: '>=3.0.1 <4.0.0'
@@ -37,21 +37,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences:
-  get_it:
-  hexcolor:
-  equatable:
-  sizer:
-  dartz:
-  awesome_notifications: ^0.6.18
-  smooth_page_indicator:
-  fluttertoast:
-  animated_splash_screen:
+  shared_preferences: ^2.2.3
+  get_it: ^7.7.0
+  hexcolor: ^3.0.1
+  equatable: ^2.0.5
+  sizer: ^2.0.15
+  dartz: ^0.10.1
+  awesome_notifications: ^0.9.3+1
+  smooth_page_indicator: ^1.2.0+3
+  fluttertoast: ^8.2.6
+  animated_splash_screen: ^1.3.0
 
 
 # bloc
-  bloc:
-  flutter_bloc:
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
 
   #fire base
   firebase_auth:
@@ -65,7 +65,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
